--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -13,7 +13,12 @@
 		<div id="container"></div>
 
 
-
+		<div class="buttons">
+			<button id="draw-black">Black</button>
+			<button id="draw-rainbow">Rainbow</button>
+			<button id="grid-size">Size</button>
+			<button id="clear-grid">Clear</button>
+		</div>
 
 
 
