Modify functions to make it work and add style to style.css

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -4,11 +4,12 @@
 		<meta charset="utf-8">
 		<title>Etch-a-Sketch</title>
 		<link rel="stylesheet" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet"> 
 	</head>
 
 	<body>
 
-
+		<h1>Etch-a-sketch</h1>
 
 		<div id="container"></div>
 
@@ -21,7 +22,7 @@
 		</div>
 
 
-
+		<p>Please press size to begin</p>
 
 
 
